# acm3

./: .gitignore  README.md
ACME/trunk/ACMEWithTweaks/: ACME.dsp  ACME.sln  ACME.vcproj  TestACME.lbl  TestACME.prg  decrunch.s  exomizer.s
ACME/trunk/ACMEWithTweaks/docs/: AllPOs.txt  Changes.txt
ACME/trunk/ACMEWithTweaks/examples/exomizer2/: Makefile  goblins.prg  start.s  zaxxon.prg
ACME/trunk/ACMEWithTweaks/examples/make cygwin allx binary compare/: Labels.lbl  endprg.pak  exomizer.prg  exomizer.s  global.lbl
ACME/trunk/ACMEWithTweaks/msysbuild/: Makefile  config.status  libtool  stamp-h1  sysconfig.h
ACME/trunk/ACMEWithTweaks/msysbuild/.deps/: acme-acme.Po  acme-alu.Po  acme-basics.Po  acme-cliargs.Po  acme-cpu.Po  acme-dynabuf.Po  acme-encoding.Po  acme-flow.Po  acme-global.Po  acme-input.Po  acme-label.Po  acme-macro.Po  acme-mnemo.Po  acme-output.Po  acme-platform.Po  acme-section.Po  acme-tree.Po
ACME/trunk/ACMEWithTweaks/msysbuild/win32/: version.lo
ACME/trunk/ACMEWithTweaks/src/: ChangeLog  Makefile.am  Makefile.cygwin  Makefile.in  NEWS  README  TODO  _std.h  _win32.h  aclocal.m4  acme.c  acme.h  basics.c  clean-dist.sh  configure  configure.in  configure.scan  devnotes-jed.txt  dynabuf.c  encoding.c  flow.c  label.c  platform.c  platform.h  sysconfig.h  sysconfig.h.in  sysconfig.h.in~
ACME/trunk/ACMEWithTweaks/src/autom4te.cache/: output.0  requests  traces.0
ACME/trunk/ACMEWithTweaks/src/win32/: version.rc
ACME/trunk/ACMEWithTweaks/testacme/: !README.txt  Labels.lbl  Makefile  endprg.pak  exomizer.prg  exomizer.s  global.lbl  goblins.prg  start.s  zaxxon.prg
ACME/trunk/ACMEWithTweaks/testacme/harzprimitives1/: basicfoo.prg  basicfoo.s  basicheader.s
ACME/trunk/ACMEWithTweaks/tools/c64tools/: bgedit.txt  cmdline.txt  readme.txt  spredit.txt
ACME/trunk/ACMEWithTweaks/tools/c64tools/src/: aomedit.c  aomedit2.c  benton64.c  bgedit3.c  bin2hex.c  bofhedit.c  c64pack.c  c64unp.c  cdepack.c  codegen.c  codegen.h  cpack.c  cs.l  cs.output  cs.tab.c  cs.tab.h  cs.y  cs_tab.c  cs_tab.h  d642prg.c  d64ren.c  depack.s  editdata.c  editfont.lbm  editfont.spr  editio.h  editor.lbm  editor.pal  editor.spr  filejoin.c  filespli.c  lex.yy.c  makedisk.c  makefile  makefile.win  pack.c  packprg.c  pchunk.c  pic2chr.c  pic2spr.c  (+13 more)
ACME/trunk/ACMEWithTweaks/tools/c64tools/src/bme/src/: editor.spr  fonts.spr  mapdata.c
ACME/trunk/ACMEWithTweaks/tools/c64tools/src/bme/win32/: mapedit.cfg
ACME/trunk/ACMEWithTweaks/tools/c64tools/win32/: MultiColor.exe.lnk  example.prg  muco  png2prg-example.bat  readme.txt
ACME/trunk/ACMEWithTweaks/tools/c64tools/win32/MultiColor/res/: README.icons.txt
ACME/trunk/ACMEWithTweaks/tools/c64tools/win32/SID/: SIDedit.ini
NasenVICE/trunk/: .cproject  .project
NasenVICE/trunk/src/: DelMakefile.am  TestClass.cpp  aclocal.m4  configure  configure.in  main.cpp
NasenVICE/trunk/src/autom4te.cache/: output.0  requests  traces.0
NasenVICE/trunk/src/include/: TestClass.h  nv_config.h.in  nv_scope.h
NasenVICE/trunk/src/libcrx/: Crx.cpp  Crx.h  Makefile.in  PStarter.cpp  PStarter.h  test.cpp
NasenVICE/trunk/src/librx/: Makefile.in  test.c
